--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@vx/gradient": "0.0.199",
+    "flubber": "^0.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-snowstorm": "0.0.3",
+    "react-spring": "^8.0.27",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
